prometheus/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: prometheus
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.19.0
        command:
        - /bin/prometheus
        args:
        - --config.file=/etc/config/prometheus.yml
        ports:
        - containerPort: 9090
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/config
          name: prometheus-config
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
