prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus.houmin
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: prometheus
